Start writing material

--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ search_enabled: true
 # Enable support for hyphenated search words:
 search_tokenizer_separator: /[\s/]+/
 
-footer_content: "Copyright &copy; 2020 Heikki Ahonen. More information about <a href=\"https://centria.github.io/basic-coding/license\">licensing here.</a>"
+footer_content: "Copyright &copy; 2020 Heikki Ahonen. More information about <a href=\"/license\">licensing here.</a>"
