Update color scheme

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 remote_theme: pmarsceill/just-the-docs
 logo: "/assets/images/Centria_amk_eng.jpg"
+color_scheme: centria
 
 # Enable or disable the site search
 # Supports true (default) or false
